[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://src/assets/Character/Body.png" type="Texture" id=2]
[ext_resource path="res://src/assets/Character/Eye.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/Control.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/ParallaxBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/assets/Sound/jump.wav" type="AudioStream" id=6]
[ext_resource path="res://src/assets/Sound/hit.wav" type="AudioStream" id=7]
[ext_resource path="res://src/assets/Sound/die.wav" type="AudioStream" id=8]
[ext_resource path="res://src/assets/Music/Game.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "respawn"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.22, 0.18 ), Vector2( 0.18, 0.22 ), Vector2( 0.22, 0.18 ), Vector2( 0.18, 0.22 ), Vector2( 0.22, 0.18 ), Vector2( 0.18, 0.22 ), Vector2( 0.22, 0.18 ), Vector2( 0.18, 0.22 ) ]
}

[sub_resource type="Animation" id=5]
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 7.6, 7.7, 7.8, 7.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.15 ), Vector2( 0.2, 0.1 ), Vector2( 0.2, 0.05 ) ]
}

[sub_resource type="Animation" id=6]
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 7.6, 7.7, 7.8, 7.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.15 ), Vector2( 0.2, 0.1 ), Vector2( 0.2, 0.05 ) ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 21.8415
height = 0.689648

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="RespawnAnim" type="AnimationPlayer" parent="."]
anims/respawn = SubResource( 1 )

[node name="DieAnim" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )

[node name="Hurt" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 3 )

[node name="body" type="Sprite" parent="."]
scale = Vector2( 0.18, 0.22 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="body"]
anims/idle = SubResource( 4 )

[node name="eyeright" type="Sprite" parent="."]
position = Vector2( -10, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="eyeright"]
anims/idle = SubResource( 5 )

[node name="eyeleft" type="Sprite" parent="."]
position = Vector2( 10, -0.5 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="eyeleft"]
anims/idle = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 5000
limit_bottom = 600
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 2.3
drag_margin_left = 0.1
drag_margin_top = 0.0
drag_margin_right = 0.1
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 7 )

[node name="hit" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="die" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="respawn" type="Timer" parent="."]
one_shot = true

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="ParallaxBackground2"]

[node name="Control" parent="ParallaxBackground2/CanvasLayer" instance=ExtResource( 4 )]

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]

[node name="DieParticles" type="CPUParticles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 50
lifetime = 0.3
randomness = 1.0
local_coords = false
draw_order = 1
texture = ExtResource( 2 )
spread = 180.0
gravity = Vector2( 0, 1000 )
initial_velocity = 500.0
initial_velocity_random = 1.0
angular_velocity = 500.0
angular_velocity_random = 1.0
scale_amount = 0.03

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -13.0

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -13.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
[connection signal="timeout" from="hit" to="." method="_on_hit_timeout"]
[connection signal="timeout" from="die" to="." method="_on_die_timeout"]
[connection signal="timeout" from="respawn" to="." method="_on_respawn_timeout"]
